2002-05-09  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/x86_64/glob.c: Remove.
	* sysdeps/unix/sysv/linux/s390/s390-64/glob.c: Remove.
	* sysdeps/unix/sysv/linux/sparc/sparc64/glob.c: Remove.

	* sysdeps/unix/sysv/linux/ia64/glob.c: Move to ...
	* sysdeps/wordsize-64/glob.c: ...here.

2002-05-08  Roland McGrath  <roland@frob.com>

	* hurd/hurdfchdir.c (_hurd_change_directory_port_from_fd): Use
	O_NOTRANS flag in "." lookup.

2002-05-05  Ulrich Drepper  <drepper@redhat.com>

	* malloc/mtrace.c: Comment out use of _mtrace_file and _mtrace_len.

2002-05-04  Ulrich Drepper  <drepper@redhat.com>

	* locale/duplocale.c (__duplocale): Update special members only
	when allocation succeeded.

2002-05-03  Roland McGrath  <roland@frob.com>

	* shlib-versions (.*-.*-gnu-gnu.*): Remove USE_IN_LIBIO conditionals;
	we can only build libc.so.0.3(GLIBC_2.2.6) now.

2002-05-02  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/Makefile: Add ia64libgcc in csu subdir.
	* sysdeps/ia64/Versions (__divtf3, __divdf3, __divsf3, __divdi3,
	__moddi3, __udivdi3, __umoddi3, __multi3): Export at GLIBC_2.0.
	* sysdeps/ia64/ia64libgcc.S: New file.

2002-05-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-tls.c (oom): Implement using _dl_fatal_printf.

	* malloc/memusage.c: Distinguish anonymous mmap.

2002-05-01  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/close.c: #undef __close before function defn,
	and use INTDEF on it.
	* sysdeps/mach/hurd/fcntl.c: Use INTDEF2.

	* sysdeps/mach/hurd/dl-sysdep.c (errno): New variable.

	* sysdeps/mach/hurd/alpha/static-start.S: New file (unfinished).

2002-05-01  Ulrich Drepper  <drepper@redhat.com>

	* malloc/memusage.c: Add support for tracking mmap & friends.
	* malloc/memusage.sh: Implement -m/--mmap option.

2002-04-30  Jakub Jelinek  <jakub@redhat.com>

	* locale/programs/locarchive.c (create_archive): Add archivefname
	argument, create fname from it.
	(enlarge_archive): Honour output_prefix.