@@ -1,4 +1,4 @@
 ifeq ($(subdir),misc)
 sysdep_routines += ioperm iopl
-sysdep_headers += sys/perm.h sys/reg.h sys/debugreg.h
+sysdep_headers += sys/perm.h sys/reg.h sys/debugreg.h sys/io.h
 endif
