@@ -1,5 +1,11 @@
 2002-05-09  Andreas Jaeger  <aj@suse.de>
 
+	* sysdeps/unix/sysv/linux/x86_64/Dist: Add sys/io.h.
+
+	* sysdeps/unix/sysv/linux/x86_64/sys/io.h: New.
+
+	* sysdeps/unix/sysv/linux/x86_64/Makefile (sysdep_headers): Add sys/io.h.
+
 	* sysdeps/unix/sysv/linux/x86_64/glob.c: Remove.
 	* sysdeps/unix/sysv/linux/s390/s390-64/glob.c: Remove.
 	* sysdeps/unix/sysv/linux/sparc/sparc64/glob.c: Remove.
